# webauthn-ffi

./: README.md  composer.json
.github/workflows/: rust.yml
ffi/: webauthn.h  yourlib.h
rustlib/: Cargo.toml
rustlib/src/: lib.rs
src/: Installer.php  WebauthnFFI.php  YourModule.php
