[package]
name = "webauthn_ffi_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
uuid = "1.16.0"
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation"] }
