[package]
name = "webauthn_ffi_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
webauthn-rs = { version = "*", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
base64 = "0.21"
