[package]
name = "webauthn_ffi_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
chrono = "0.4"
serde_cbor = "0.11"
